stylized and moved submit button

--- a/fire/public/profile.html
+++ b/fire/public/profile.html
@@ -127,14 +127,14 @@
               <input type="email" class="form-control" id="inputEmail" placeholder="Email" v-model="#">
             </div>
           </div>
-
+          <form id=submitButton>
+          <div>
+          <button>Submit</button>
+          </div>
+          </form>
         </div>
       </div>
-      <form>
-<div>
-  <button>Submit</button>
-</div>
-</form>
+
 <div class="wrapper row3">
   <footer id="footer" class="clear">
       <center>All Rights Reserved - Team 22 MSIS Core</center>
