working on displaying dummy data

--- a/fire/public/All.html
+++ b/fire/public/All.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>OCFR-Member</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/layout.css" type="text/css">
-    
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <title>OCFR-Member</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/layout.css" type="text/css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    </head>   
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
 <body>
-
   <div class="wrapper row1">
   <header id="header" class="clear">
-   
-      <div id="hgroup">
-          <h1>Oconee County Fire Rescue</h1>
+    <div id="hgroup">
+        <h1>Oconee County Fire Rescue</h1>
     </div>
-    
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -38,10 +27,11 @@
   </header>
 </div>
 
-<div class="wrapper row2">
-  <div id="container" class="clear">
-
-        <table class="table table-sm table-hover">
+<div class="container">
+  <div class="row">
+    <div id="mainContent" class="col">
+      <div id="patientRecordApp">
+          <table class="table table-sm table-hover">
             <thead>
               <tr>
                 <th>First Name</th>
@@ -52,7 +42,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr v-for="F in Flighters" @click="handleRowClick(p)">
+              <tr v-for="F in fighters">
                 <td>{{ F.FirstName }}</td>
                 <td>{{ F.LastName }}</td>
                 <td>{{ F.Station }}</td>
@@ -61,15 +51,25 @@
               </tr>
             </tbody>
           </table>
-
-
         </div>
       </div>
+    </div>
+  </div>
+</body>
 <div class="wrapper row3">
   <footer id="footer" class="clear">
       <center>All Rights Reserved - Team 22 MSIS Core</center>
-  
+
   </footer>
-    </div>
+</div>
+    <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- Popper JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="record.app.js"></script>
 </body>
 </html>
