more work on connecting submit button to view js

--- a/fire/public/profile.html
+++ b/fire/public/profile.html
@@ -38,6 +38,7 @@
   </header>
 </div>
 
+<div id="FighterRecordApp"
 <div class="wrapper row2">
   <div id="container" class="clear">
 
@@ -127,14 +128,13 @@
               <input type="email" class="form-control" id="inputEmail" placeholder="Email" v-model="#">
             </div>
           </div>
-          <form id=submitButton>
-          <div>
-          <button>Submit</button>
-          </div>
+          <form id="submitButton" action="" method="post">
+            <input type="submit">
+
           </form>
         </div>
       </div>
-
+</div>
 <div class="wrapper row3">
   <footer id="footer" class="clear">
       <center>All Rights Reserved - Team 22 MSIS Core</center>
