submit button work

--- a/fire/public/profile.html
+++ b/fire/public/profile.html
@@ -38,7 +38,8 @@
   </header>
 </div>
 
-<div id="FighterRecordApp"
+<div id="FighterRecordApp">
+  <form>
 <div class="wrapper row2">
   <div id="container" class="clear">
 
@@ -128,12 +129,13 @@
               <input type="email" class="form-control" id="inputEmail" placeholder="Email" v-model="#">
             </div>
           </div>
-          <form id="submitButton" action="" method="post">
+          <form>
             <input type="submit">
 
           </form>
         </div>
       </div>
+    </form>
 </div>
 <div class="wrapper row3">
   <footer id="footer" class="clear">
