--- a/fire/public/All.html
+++ b/fire/public/All.html
@@ -30,7 +30,7 @@
 <div class="container">
   <div class="row">
     <div id="mainContent" class="col">
-      <div id="patientRecordApp">
+      <div id="fighterRecordApp">
           <table class="table table-sm table-hover">
             <thead>
               <tr>
@@ -59,7 +59,6 @@
 <div class="wrapper row3">
   <footer id="footer" class="clear">
       <center>All Rights Reserved - Team 22 MSIS Core</center>
-
   </footer>
 </div>
     <!-- jQuery library -->
