added javascript to submit button

--- a/fire/public/profile.html
+++ b/fire/public/profile.html
@@ -129,7 +129,7 @@
               <input type="email" class="form-control" id="inputEmail" placeholder="Email" v-model="#">
             </div>
           </div>
-          <form>
+          <form  v-on:submit.prevent="handleSubmit">
             <input type="submit">
 
           </form>
@@ -143,5 +143,6 @@
 
   </footer>
     </div>
+    <script>src="js/recordFigter.app.js"</script>
 </body>
 </html>
