changed indent in all

--- a/fire/public/All.html
+++ b/fire/public/All.html
@@ -11,26 +11,26 @@
 </head>
 <body>
   <div class="wrapper row1">
-  <header id="header" class="clear">
-    <div id="hgroup">
-        <h1>Oconee County Fire Rescue</h1>
-    </div>
+    <header id="header" class="clear">
+      <div id="hgroup">
+          <h1>Oconee County Fire Rescue</h1>
+      </div>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="profile.html">Add New Member</a></li>
-        <li><a href="Expire.html">Display Expired Certifications</a></li>
-        <li><a href="All.html">Display All Members</a></li>
-      </ul>
-    </nav>
-  </header>
-</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="profile.html">Add New Member</a></li>
+          <li><a href="Expire.html">Display Expired Certifications</a></li>
+          <li><a href="All.html">Display All Members</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
-<div class="container">
-  <div class="row">
-    <div id="mainContent" class="col">
-      <div id="fighterRecordApp">
+  <div class="container">
+    <div class="row">
+      <div id="mainContent" class="col">
+        <div id="fighterRecordApp">
           <table class="table table-sm table-hover">
             <thead>
               <tr>
@@ -69,6 +69,6 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="record.app.js"></script>
+  <script src="js/record.app.js"></script>
 </body>
 </html>
