trying to make dummy data display in table

--- a/fire/public/All.html
+++ b/fire/public/All.html
@@ -29,8 +29,8 @@
 
   <div class="container">
     <div class="row">
-      <div id="mainContent" class="col">
-        <div id="fighterRecordApp">
+      <!-- <div id="mainContent" class="col"> -->
+        <div id="fighterRecordApp" v-for="F in fighters">
           <table class="table table-sm table-hover">
             <thead>
               <tr>
