--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -38,104 +38,107 @@
   </header>
 </div>
 
-<div id="FighterRecordApp">
+<div id="fighterRecordApp">
   <form>
-<div class="wrapper row2">
-  <div id="container" class="clear">
+    <div class="wrapper row2">
+      <div id="container" class="clear">
+
+        <div class="form-group row">
+          <label for="inputFirstName" class="form-group col-md-6">First Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" v-model="recordFighter.FirstName">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="inputLastName" class="form-group col-md-6">Last Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" v-model="recordFighter.LastName">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="inputGender" class="form-group col-md-6">Gender</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputGender" placeholder="Male/Female" v-model="recordFighter.Gender">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="inputGender" class="form-group col-md-6">Date of Birth</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputGender" placeholder="Male/Female" v-model="recordFighter.DateOfBirth">
+          </div>
+        </div>
+
+        <div class="form-group row">
+              <label for="inputStreet" class="col-md-6">Street Address</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputStreet" placeholder="Street" v-model="recordFighter.Street">
+              </div>
+        </div>
+
+
+        <div class="form-group row">
+              <label for="inputCity" class="col-md-6">City</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputCity" placeholder="City" v-model="recordFighter.City">
+              </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="inputState" class="col-md-6">State</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputState" placeholder="State" v-model="recordFighter.State">
+          </div>
+        </div>
 
           <div class="form-group row">
-            <label for="inputFirstName" class="form-group col-md-6">First Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" v-model="#">
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="inputLastName" class="form-group col-md-6">Last Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" v-model="#">
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label for="inputGender" class="form-group col-md-6">Gender</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputGender" placeholder="Male/Female" v-model="#">
-            </div>
-          </div>
-
-
-      <div class="form-group row">
-            <label for="inputStreet" class="col-md-6">Street Address</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputStreet" placeholder="Street" v-model="#">
-            </div>
-          </div>
-
-
-      <div class="form-group row">
-            <label for="inputCity" class="col-md-6">City</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputCity" placeholder="City" v-model="#">
-            </div>
-          </div>
-
-
-      <div class="form-group row">
-            <label for="inputState" class="col-md-6">State</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputState" placeholder="State" v-model="#">
-            </div>
-          </div>
-
-      <div class="form-group row">
             <label for="inputZip" class="col-md-6">Zip Code</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputZip" placeholder="Zip" v-model="#">
+              <input type="text" class="form-control" id="inputZip" placeholder="Zip" v-model="recordFighter.ZipCode">
             </div>
           </div>
-
-
 
           <div class="form-group row">
             <label for="inputWorkphone" class="col-md-6">Work phone number</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputWorkphone" placeholder="Eg. (000)-000-0000" v-model="#">
+              <input type="text" class="form-control" id="inputWorkphone" placeholder="Eg. (000)-000-0000" v-model="recordFighter.WorkNum">
             </div>
           </div>
 
           <div class="form-group row">
             <label for="inputMobilephone" class="col-md-6">Mobile phone number</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputMobilephone" placeholder="Eg. (000)-000-0000" v-model="#">
+              <input type="text" class="form-control" id="inputMobilephone" placeholder="Eg. (000)-000-0000" v-model="recordFighter.MobileNum">
             </div>
           </div>
 
           <div class="form-group row">
             <label for="inputRadioNum" class="col-md-6">Radio number</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputRadioNum" placeholder="Eg. 000" v-model="#">
+              <input type="text" class="form-control" id="inputRadioNum" placeholder="Eg. 000" v-model="recordFighter.RadioNum">
             </div>
           </div>
-        <div class="form-group row">
-            <label for="inputStationNum" class="col-md-6">Station number</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputStationNum" placeholder="Eg. 000" v-model="#">
-            </div>
-          </div>
-    <div class="form-group row">
-            <label for="inputEmail" class="col-md-6">Email Address</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="inputEmail" placeholder="Email" v-model="#">
-            </div>
-          </div>
-          <form  v-on:submit.prevent="handleSubmit">
-            <input type="submit">
 
-          </form>
+          <div class="form-group row">
+              <label for="inputStationNum" class="col-md-6">Station number</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputStationNum" placeholder="Eg. 000" v-model="recordFighter.StationNum">
+              </div>
+          </div>
+          <div class="form-group row">
+                  <label for="inputEmail" class="col-md-6">Email Address</label>
+                  <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email" v-model="recordFighter.Email">
+          </div>
         </div>
-      </div>
+        <form  v-on:submit.prevent="handleSubmit">
+          <input type="submit">
     </form>
+  </div>
+</div>
+</form>
 </div>
 <div class="wrapper row3">
   <footer id="footer" class="clear">
