trying to post from form

--- a/app/public/All.html
+++ b/app/public/All.html
@@ -44,8 +44,8 @@
                   <tr v-for="f in fighters">
                     <td>{{ f.FirstName }}</td>
                     <td>{{ f.LastName }}</td>
-                    <td>{{ f.StationNumber }}</td>
-                    <td>{{ f.RadioNumber }}</td>
+                    <td>{{ f.StationNum }}</td>
+                    <td>{{ f.RadioNum }}</td>
                     <td>{{ f.Email }}</td>
                   </tr>
                 </tbody>
