Changed password and made updates to form

--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -148,7 +148,8 @@
   <footer id="footer" class="clear">
     <center>All Rights Reserved - Team 22 MSIS Core</center>
   </footer>
-    </div>
-    <script>src="js/recordFigter.app.js"</script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script>src="js/recordFigter.app.js"</script>
 </body>
 </html>
