changed app name

--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -40,7 +40,7 @@
 
   <main>
     <div id="fighterRecordApp">
-      <form v-on:submit.prevent="handleSubmit">
+      <form v-on:submit="handleSubmit">
       <!-- <form> -->
         <div class="wrapper row2">
           <div id="container" class="clear">
@@ -150,6 +150,6 @@
   </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script>src="js/recordFigter.app.js"</script>
+  <script>src="js/fighterRecordApp.app.js"</script>
 </body>
 </html>
