--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -150,6 +150,6 @@
   </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script>src="js/recordFigter.app.js"</script>
+  <script src="js/recordFighter.app.js"></script>
 </body>
 </html>
