--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -144,6 +144,73 @@
         </div>
       </form>
     </div>
+
+
+
+
+    <div class="container">
+      <div class="row">
+        <div id="fighterRecordApp" class="col-md-12 queueView">
+            <table class="table table-sm table-hover">
+              <thead>
+                <tr>
+                  <th>Field Name</th>
+                  <th>Personal Data</th>
+
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td> Member Id </td>
+                  <td>{{ f.MemberId }}</td>
+                </tr>
+                <tr>
+                  <td> First Name </td>
+                  <td>{{ f.FirstName }}</td>
+                  <tr>
+                    <td> Last Name </td>
+                    <td>{{ f.LastName }}</td>
+                  </tr>
+
+                  <tr>
+                    <td> Gender </td>
+                    <td>{{ f.Gender }}</td>
+                  </tr>
+
+                  <tr>
+                    <td> Date Of Birth </td>
+                    <td>{{ f.DateOfBirth }}</td>
+                  </tr>
+
+                  <tr>
+                    <td> Street Address </td>
+                    <td>{{ f.Street }}</td>
+                  </tr>
+
+                <tr>
+                  <td> City </td>
+                  <td>{{ f.City }}</td>
+              </tr>
+
+              <tr>
+                <td> State </td>
+                <td>{{ f.State }}</td>
+            </tr>
+            <tr>
+              <td> Zip Code </td>
+              <td>{{ f.Zip }}</td>
+          </tr>
+
+          <tr>
+            <td>  </td>
+            <td>{{ f.City }}</td>
+        </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
   </main>
   <div class="wrapper row3">
   <footer id="footer" class="clear">
