--- a/app/public/Certification.html
+++ b/app/public/Certification.html
@@ -32,12 +32,24 @@
 </div>
 
 
-
-
-<div id="certificationRecordApp">
+<div id="EnrollmentRecordApp">
   <form>
     <div class="wrapper row2">
       <div id="container" class="clear">
+
+
+        <div class="form-group row">
+          <label for="SelectName" class="form-group col-md-6">Select your Name</label>
+          <div class="col-sm-10">
+
+            <input type="radio" name="Name" value="male" checked> Male<br>
+ <input type="radio" name="gender" value="female"> Female<br>
+ <input type="radio" class="form-control" idname="gender" value="other"> Other
+
+            <input type="text" class="form-control" id="inputCertificationId" placeholder="CertificationId" v-model="recordCertification.CertificationId">
+          </div>
+        </div>
+
 
         <div class="form-group row">
           <label for="inputCertificationId" class="form-group col-md-6">CertificationId</label>
