--- a/app/public/TestAll.html
+++ b/app/public/TestAll.html
@@ -10,31 +10,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-  <div id="fighterRecordApp">
-    <div>
-      <table>
-        <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Station Number</th>
-            <th>Radio Number</th>
-            <th>Email</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr v-for="f in fighters">
-            <td>{{ f.FirstName }}</td>
-            <td>{{ f.LastName }}</td>
-            <td>{{ f.StationNumber }}</td>
-            <td>{{ f.RadioNumber }}</td>
-            <td>{{ f.Email }}</td>
-          </tr>
-        </tbody>
-      </table>
+  <main>
+    <div id="fighterRecordApp">
+      <form>
+        <div v-for="f in fighters">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" v-model="fighters.MemberId" value="fighters.MemberId" checked>
+            <label class="form-check-label">
+              {{ f.FirstName }} {{ f.LastName }} {{ f.MemberId }}
+            </label>
+          </div>
+        </div>
+      </form>
     </div>
-  </div>
 
+  </main>
     <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -44,7 +34,7 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="js/record.app.js"></script>
+  <script src="js/recordFighter.app.js"></script>
 
 </body>
 </html>
