separating app functionality and working on enrollment app

--- a/app/public/All.html
+++ b/app/public/All.html
@@ -31,7 +31,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div id="fighterRecordApp" class="col-md-12 queueView">
+          <div id="fighterApp" class="col-md-12 queueView">
               <table class="table table-sm table-hover">
                 <thead>
                   <tr>
@@ -70,7 +70,7 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="js/recordFighter.app.js"></script>
+  <script src="js/fighter.app.js"></script>
 
 </body>
 </html>
