--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -41,12 +41,12 @@
 
   <main>
     <div id="fighterRecordApp">
-      <form v-on:submit="handleSubmit">
-      <!-- <form> -->
+      <form v-on:submit="handleSubmit" class="form-style">
+
         <div class="wrapper row2">
           <div id="container" class="clear">
 
-            <div class="form-group row">
+            <div class="form-group row ul li">
               <label for="inputFirstName" class="form-group col-md-6">First Name</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" v-model="recordFighter.FirstName">
