--- a/app/public/All.html
+++ b/app/public/All.html
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="row">
           <div id="fighterApp" class="col-md-12 queueView">
-              <table class="table table-sm table-hover">
+              <table class="table">
                 <thead>
                   <tr>
                     <th>First Name</th>
