--- a/app/public/Certification.html
+++ b/app/public/Certification.html
@@ -29,83 +29,41 @@
     <main>
       <div class="container">
       <div id="testApp">
-        <form v-on:submit.prevent="handleSubmit">
+        <form v-on:submit.prevent="handleSubmit" class="form-style">
           <div class="wrapper row2">
             <div class="clear">
-              <!-- <div>
-                <form>
-                  <div v-for="f in fighters">
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="fighterRadios" id="exampleRadios1" v-model="fighters.MemberId" value="fighters.MemberId" checked>
-                      <label class="form-check-label">
-                        {{ f.FirstName }} {{ f.LastName }} {{ f.MemberId }}
-                      </label>
-                    </div>
-                  </div>
-                </form>
-              </div> -->
-              <select class="custom-select" id="inputMemberId" v-model=recordEnrollment.MemberId>
+
+
+              <ul>
+                <li>
+              <select class="custom-select field-style" id="inputMemberId" v-model=recordEnrollment.MemberId>
                 <option v-for="f in fighters" value="fighters.MemberId">{{ f.FirstName }} {{ f.LastName }}</option>
               </select>
-
+            </li>
+            <li>
               <select class="custom-select" id="inputCertificationId" v-model=recordEnrollment.CertificationId>
                 <option selected>Certification</option>
                 <option v-for="c in certs" value="certs.CertificationId">{{ c.Name }} {{ c.Description }}</option>
               </select>
-              <!-- <div>
-                <form>
-                  <div v-for="c in certs">
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="certRadios" id="exampleRadios2" v-model="certs.CertificationId" value="fighters.CertificationId" checked>
-                      <label class="form-check-label">
-                        {{ c.Name }} {{ c.CertificationId }}
-                      </label>
-                    </div>
-                  </div>
-                </form>
-              </div> -->
+            </li>
 
 
-              <!-- <div id="certApp" class="row">
-                <div class="col-md-6 queueView">
-                    <table class="table table-sm table-hover">
-                      <thead>
-                        <tr>
-                          <th>Certification Id</th>
-                          <th>Certification Name</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr v-for="c in certs">
-                          <td>{{ c.CertificationId }}</td>
-                          <td>{{ c.Name }}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-       -->
+              <li>
+                  <input type="date" class="form-control" id="inputStartDate" placeholder="Start Date" v-model="recordEnrollment.StartDate">
+                </li>
 
 
-              <div class="form-group row">
-                <label for="inputStartDate" class="form-group col-md-6">Start Date</label>
-                <div class="col-sm-10">
-                  <input type="date" class="form-control" id="inputStartDate" placeholder="StartDate" v-model="recordEnrollment.StartDate">
-                </div>
-              </div>
-
-              <div class="form-group row">
-                <label for="inputExpireDate" class="form-group col-md-6">Expire Date</label>
-                <div class="col-sm-10">
-                  <input type="date" class="form-control" id="inputExpireDate" placeholder="ExpireDate" v-model="recordEnrollment.ExpireDate">
-                </div>
-              </div>
+              <li>
+                  <input type="date" class="form-control" id="inputExpireDate" placeholder="Expire Date" v-model="recordEnrollment.ExpireDate">
+                </li>
 
 
-
-              <form>
+<br>
+<li>
                 <input type="submit">
-              </form>
+
+              </li>
+        </ul>
             </div>
           </div>
         </form>
