--- a/app/public/Certification.html
+++ b/app/public/Certification.html
@@ -36,7 +36,7 @@
 
               <ul>
                 <li>
-              <select class="custom-select field-style" id="inputMemberId" v-model=recordEnrollment.MemberId>
+              <select class="custom-select" id="inputMemberId" v-model=recordEnrollment.MemberId>
                 <option v-for="f in fighters" value="fighters.MemberId">{{ f.FirstName }} {{ f.LastName }}</option>
               </select>
             </li>
