--- a/app/public/Expire.html
+++ b/app/public/Expire.html
@@ -27,14 +27,25 @@
     </nav>
   </header>
 </div>
+<br>
+<div class="container filter">
+  <div class="sort">
+        <select v-model="filter.Gender">
+          <option value="">(all)</option>
+          <option>Male</option>
+          <option>Female</option>
+        </select>
+      </div>
+    </div>
 
 <div class="container">
+
   <div class="row">
     <div id="mainContent" class="col">
       <div id="fighterRecordApp">
           <table class="table" id="SortTask">
             <thead>
-              <tr>
+              <tr v-if="!filter.Gender || f.Gender==filter.sab">
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Station Number</th>
