--- a/app/public/Expire.html
+++ b/app/public/Expire.html
@@ -81,6 +81,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="record.app.js"></script>
      <script src="js/tablesort.min.js"></script>
   <script>
