--- a/app/public/Expire.html
+++ b/app/public/Expire.html
@@ -42,7 +42,7 @@
 
   <div class="row">
     <div id="mainContent" class="col">
-      <div id="fighterApp">
+      <div id="expireApp">
           <table class="table" id="SortTask">
             <thead>
               <tr v-if="!filter.Gender || f.Gender==filter.Gender">
@@ -82,7 +82,7 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="fighter.app.js"></script>
+  <script src="expire.app.js"></script>
   <script src="js/tablesort.min.js"></script>
   <script>new Tablesort(document.getElementById('SortTask'));</script>
 </body>
